js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-block-labeled-import-source-empty-str-is-valid-assign-expr.js
label
:
{
import
.
source
(
'
<
module
source
>
'
)
;
}
;
reportCompare
(
0
0
)
;
