js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
label
:
{
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
;
